# CalculateSkillMetrics

./: CMakeLists.txt
CalculateSkillMetrics/: CMakeLists.txt  CalculateSkillMetrics.py
CalculateSkillMetrics/Resources/UI/: CalculateSkillMetrics.ui
